# deepchem-utils

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
deepchem_utils/: callback.py  config.py  dataset.py  featurizers.py  model_selection.py  models.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
