[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deepchem_utils"
version = "0.1.0"
description = "Custom utility functions and classes for DL model exploration with DeepChem"
authors = [
  { name = "Dr. Freddy A. Bernal" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"
dependencies = [
  "numpy==1.26.4",
  "deepchem==2.8.0",
  "rdkit",
  "ruff",
  "scikit-learn",
  "tqdm",
]

[project.urls]
Repository = "https://github.com/BernalFA/deepchem-utils"

[tool.ruff]
line-length = 99
src = ["deepchem_utils"]
include = ["pyproject.toml", "deepchem_utils/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["deepchem_utils"]
force-sort-within-sections = true

